# ivastbot_ws

./: .gitignore  CLAUDE.md  frames_2026-05-11_17.22.29.gv  test_lidar.py  test_lidar.rviz
src/bringup/: package.xml  setup.py
src/bringup/bringup/: __init__.py  scan_filter_node.py
src/bringup/config/: controllers.yaml
src/bringup/launch/: bringup.launch.py  rviz.launch.py
src/bringup/meshes/: banhnhophai_link.STL  banhnhotrai_link.STL  banhtophai_link.STL  banhtotrai_link.STL  base_link.STL
src/bringup/urdf/: ids830.ros2_control.xacro  ivastbot.urdf.xacro  robot_description.urdf.xacro
src/flydigi/: setup.cfg  setup.py
src/flydigi/flydigi/: flydigi_node.py  package.xml  test_joystick.py
src/flydigi/flydigi/flydigi/: __init__.py
src/flydigi/flydigi/launch/: flydigi.launch.py
src/ids830_hw/: CMakeLists.txt  ids830_hw.xml  package.xml  test_ids830.py  test_motor.py  ui.py
src/ids830_hw/config/: controllers.yaml
src/ids830_hw/include/ids830_hw/: ids830_hw.hpp
src/ids830_hw/launch/: bringup.launch.py
src/ids830_hw/src/: ids830_hw.cpp
src/ids830_hw/urdf/: robot.urdf.xacro
src/slam/: CMakeLists.txt  package.xml
src/slam/config/: slam.yaml
src/slam/launch/: slam.launch.xml
src/slam/rviz/: slam.rviz
